2011-08-24  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cartridge.[ch], ui.c, atari800.man, DOC/cart.txt, DOC/USAGE: Added support
  for a 32 KB cartridge format used by Atari Super Turbo Multi-Cartridge.

* cfg.c, rtime.[ch]: Support for saving the state of R-Time 8 in config file.

* atari800.man: Improve formatting (bold, italic etc.), mainly according to
  man-pages(7).


2011-08-06  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* afile.c: Fixed compilation errors for --target=basic introduced on
  2011-06-27.


2011-08-05  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* DOS/cart.txt, DOC/USAGE, cartridge.[ch], ui.c: Added support for the
  Blizzard-type 4KB cartridge (which contains a 2732 EPROM inside).


2011-07-23  Kostas Nakos  <knakos@gmail.com>
* atari.c: Use FPS defines in autoframeskip
* android/*: Fix a nasty bug, when orientation was changed during the
             preferences activity,
             added shadow rectangle around console keys overlay


2011-07-02  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cartridge.[ch], ui.c, atari800.man, DOC/cart.txt, DOC/USAGE: Added support
  for the OSS 043M cartridge format. The old 034M format is marked as obsolete
  but still supported. Renamed the OSS cartridge formats to include
  information on number of ROM chips (043M/034M - two chip, M091 - one chip).


2011-06-27  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cassette.c: Fixed a bug with eof_of_tape not always being set to 1 when it
  should be, f.e. after a call to CASSETTE_Seek(). When the SIO patch was
  enabled and the tape was Seek'ed past the last block, this could result in
  a call to CASSETTE_IOLineStatus() while CASSETTE_current_block was higher
  than CASSETTE_max_block. This in turn would cause division by 0 (due to
  reading an uninitialilsed value from cassette_baudblock).
  Now eof_of_tape is set properly after every change of either
  CASSETTE_current_block or CASSETTE_max_block, so a dangerous call to
  CASSETTE_IOLineStatus doesn't happen anymore.